Corrected font sizes on tablet and desktop, added and sized images on homepage

--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,14 @@ address {
   margin: 50px 0;
 }
 
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
 /* -------------------- Base Header - Footer Styles -------------------- */
 
 header,
@@ -159,6 +167,14 @@ header .content-wrapper {
   align-items: center;
   flex-flow: row wrap;
   margin: 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .header-divider {
@@ -233,6 +249,9 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url(../img/unplugged-retreat.jpg) center no-repeat #333;
+  background-size: cover;
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -283,6 +302,8 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url(../img/unplugged-retreat-features.jpg) center no-repeat #333;
+  background-size: cover;
 }
 
 .features h2 {
@@ -323,6 +344,14 @@ input[type=button] {
 .reviews h3 {
   width: 55%;
   margin: 20px 0;
+}
+
+.reviews figure {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 /*==========================================================================
@@ -479,6 +508,16 @@ input[type=button] {
     margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
   /*Header styles*/
   header {
     justify-content: space-around;
@@ -488,6 +527,10 @@ input[type=button] {
   header .content-wrapper {
     width: 100%;
     justify-content: space-between;
+  }
+
+  header figure {
+    width: 33%;
   }
 
   header nav {
@@ -505,6 +548,10 @@ input[type=button] {
   /*Homepage Styles */
   /* Hero Area */
 
+  .hero-area {
+    min-height: 600px;
+  }
+
   /* Aside */
   aside .content-wrapper {
     margin: 50px 0;
@@ -520,6 +567,10 @@ input[type=button] {
   }
 
   /* Features */
+
+  .features h2 {
+    margin-bottom: 20px;
+  }
 
   .features article {
     display: flex;
@@ -539,6 +590,11 @@ input[type=button] {
     justify-content: space-between;
   }
 
+  .reviews h2 {
+    width: 85%;
+  }
+
+  .reviews article figure,
   .reviews article div {
     width: 49%;
   }
@@ -549,15 +605,25 @@ input[type=button] {
     margin: 100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer .contact {
     margin-bottom: 0;
   }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+footer p {
+  line-height: 1.285;
+}
 
   footer .copyright {
     width: 100%;
@@ -585,6 +651,10 @@ input[type=button] {
     align-items: flex-start;
   }
 
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
   /************* FAQ Page **************/
 
   header {
@@ -603,18 +673,44 @@ input[type=button] {
     width: 100%;
   }
 
+  .faq h4,
+  .faq p {
+    font-size: .875em;
+    line-height: 1.125;
+  }
+
 }
 
 @media only screen and (min-width: 1200px) {
 
   /*Desktop styles here*/
+ 
+ header {
+  padding: 15px 0;
+ }
+ 
   .content-wrapper {
     max-width: 960px;
   }
 
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
   /* Hero */
   .hero-area h1 {
-    width: 60%
+    width: 60%;
+    font-size: 3.75em;
   }
 
   /* Aside */
@@ -625,6 +721,10 @@ input[type=button] {
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
     width: 30%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /* Features */
@@ -641,6 +741,14 @@ input[type=button] {
     width: 42%;
   }
 
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+
+footer h4 {
+  font-size: 1.875em;
+}
+
   /* ==========================================================================
 About Page
 ========================================================================== */
@@ -649,12 +757,24 @@ About Page
     width: 95%;
   }
 
+  .contact-content h4 {
+    font-size: 1.875em;
+  }
+
   /* ==========================================================================
 FAQ Page
 ========================================================================== */
   .faq h2 {
     width: 100%;
+    font-size: 3em;
   }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
+  }
+
 }
 
 /* ==========================================================================
